--- a/Parkheesung.WebUI/Parkheesung.WebUI.csproj
+++ b/Parkheesung.WebUI/Parkheesung.WebUI.csproj
@@ -162,10 +162,24 @@
     <Content Include="Content\css\bootflat.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\HTML\newPasswordMailForm.html" />
+    <Content Include="Content\images\Link\facebook.png" />
+    <Content Include="Content\images\Link\GoogleBlog.png" />
+    <Content Include="Content\images\Link\instagram.png" />
+    <Content Include="Content\images\Link\kakao.png" />
+    <Content Include="Content\images\Link\LinkdIn.png" />
+    <Content Include="Content\images\Link\NaverBlog.png" />
+    <Content Include="Content\images\Link\pinterest.png" />
+    <Content Include="Content\images\Link\tstory.png" />
+    <Content Include="Content\images\Link\Tumblr.png" />
+    <Content Include="Content\images\Link\Twitter.png" />
+    <Content Include="Content\images\Link\wBlog.png" />
+    <Content Include="Content\img\Main_01.png" />
     <Content Include="Content\img\check_flat\default.png" />
     <Content Include="Content\img\close-button.png" />
     <Content Include="Content\img\close_btn.png" />
     <Content Include="Content\img\loading_flower.gif" />
+    <Content Include="Content\img\main_02.png" />
+    <Content Include="Content\img\Main_03.png" />
     <Content Include="Content\js\icheck.min.js" />
     <Content Include="Content\js\jquery.fs.selecter.min.js" />
     <Content Include="Content\js\jquery.fs.stepper.min.js" />
@@ -195,6 +209,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Filters\DoYouLoginAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -256,6 +271,8 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\_SubPage.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Profile\Index.cshtml" />
+    <Content Include="Views\Profile\SNS.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
