--- a/Parkheesung.WebUI/Views/web.config
+++ b/Parkheesung.WebUI/Views/web.config
@@ -19,6 +19,8 @@
         <add namespace="Parkheesung.WebUI" />
         <add namespace="System.Web.Optimization" />
         <add namespace="OctopusLibrary.HtmlHelpers" />
+        <add namespace="Parkheesung.Domain.Entities" />
+        <add namespace="Parkheesung.Domain.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
