--- a/Parkheesung.Domain/App.config
+++ b/Parkheesung.Domain/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <clear />
-    <add name="EFDbContext" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=Parkheesung;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext" connectionString="Data Source=192.168.0.23;Initial Catalog=Parkheesung;User ID=parktest;Password=park1004;Connect Timeout=1800;Application Name=Parkheesung" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
