--- a/Parkheesung.Tests/Parkheesung.Tests.csproj
+++ b/Parkheesung.Tests/Parkheesung.Tests.csproj
@@ -103,7 +103,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DomainTests\RelevantToMember.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebUITests\MemberTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Parkheesung.Domain\Parkheesung.Domain.csproj">
