--- a/Parkheesung.Tests/Parkheesung.Tests.csproj
+++ b/Parkheesung.Tests/Parkheesung.Tests.csproj
@@ -53,7 +53,9 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
@@ -106,6 +108,7 @@
     <Compile Include="DomainTests\RelevantToMember.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebUITests\MemberTests.cs" />
+    <Compile Include="WebUITests\AccountTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Parkheesung.Domain\Parkheesung.Domain.csproj">
