Secret Key Added

--- a/Parkheesung.WebUI/Web.config
+++ b/Parkheesung.WebUI/Web.config
@@ -20,6 +20,7 @@
     <add key="IsReal" value="false" />
     <add key="GMailID" value="test@gmail.com" />
     <add key="GMailPWD" value="1234" />
+    <add key="SecretKey" value="{ Key }" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
