--- a/Parkheesung.Tests/Parkheesung.Tests.csproj
+++ b/Parkheesung.Tests/Parkheesung.Tests.csproj
@@ -64,8 +64,9 @@
       <HintPath>..\packages\Moq.4.5.13\lib\net45\Moq.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="OctopusLibrary">
-      <HintPath>Z:\Library\OctopusLibrary.dll</HintPath>
+    <Reference Include="OctopusLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\OctopusLibrary.0.0.1\lib\net40\OctopusLibrary.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
