--- a/Parkheesung.WebUI/Parkheesung.WebUI.csproj
+++ b/Parkheesung.WebUI/Parkheesung.WebUI.csproj
@@ -106,8 +106,9 @@
       <HintPath>..\packages\NLog.4.3.5\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="OctopusLibrary">
-      <HintPath>Z:\Library\OctopusLibrary.dll</HintPath>
+    <Reference Include="OctopusLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\OctopusLibrary.0.0.1\lib\net40\OctopusLibrary.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Web.DynamicData">
       <Private>True</Private>
