--- a/Parkheesung.WebUI/packages.config
+++ b/Parkheesung.WebUI/packages.config
@@ -17,5 +17,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net452" />
   <package id="NLog" version="4.3.5" targetFramework="net452" />
+  <package id="OctopusLibrary" version="0.0.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
