--- a/Parkheesung.Domain/Parkheesung.Domain.csproj
+++ b/Parkheesung.Domain/Parkheesung.Domain.csproj
@@ -47,7 +47,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="OctopusLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\OctopusLibrary.0.0.1\lib\net40\OctopusLibrary.dll</HintPath>
+      <HintPath>..\packages\OctopusLibrary.0.0.2\lib\OctopusLibrary.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
